added more features to Blitz